# src/docs/management/management_swagger.json
@@ -96,6 +96,49 @@
             }
         },
         "/cache/{name}/multipart-nar/{narUuid}": {
+            "put": {
+                "description": "Upload raw NAR data for a given UUID in a cache.",
+                "consumes": [
+                    "application/octet-stream"
+                ],
+                "tags": [
+                    "cache"
+                ],
+                "summary": "Upload NAR data",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Cache Name",
+                        "name": "name",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "NAR UUID",
+                        "name": "narUuid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Get the direct upload URL for a multipart NAR upload.",
                 "produces": [
@@ -955,10 +998,19 @@
         "model.Agent": {
             "type": "object",
             "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "deletedAt": {
+                    "$ref": "#/definitions/gorm.DeletedAt"
+                },
                 "id": {
                     "type": "integer"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "updatedAt": {
                     "type": "string"
                 },
                 "uuid": {
@@ -1042,6 +1094,9 @@
                 "createdAt": {
                     "type": "string"
                 },
+                "deletedAt": {
+                    "$ref": "#/definitions/gorm.DeletedAt"
+                },
                 "id": {
                     "type": "string"
                 },
@@ -1049,6 +1104,9 @@
                     "$ref": "#/definitions/model.DeploymentStatus"
                 },
                 "storePath": {
+                    "type": "string"
+                },
+                "updatedAt": {
                     "type": "string"
                 }
             }
@@ -1144,10 +1202,19 @@
                 "binary_cache_id": {
                     "type": "integer"
                 },
+                "createdAt": {
+                    "type": "string"
+                },
+                "deletedAt": {
+                    "$ref": "#/definitions/gorm.DeletedAt"
+                },
                 "id": {
                     "type": "integer"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "updatedAt": {
                     "type": "string"
                 }
             }
